2013-10-14  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): ranlib on static library, not DLLIB.

2013-10-13  Andrew Grimm  <andrew.j.grimm@gmail.com>

	* vsnprintf.c: Fix spelling from compliment to complement.
	  Patch by @agrimm.

	* include/ruby/ruby.h: ditto

2013-10-13  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (Init_BareVM): initialize defined_module_hash here,
	  Init_top_self() is too late to register core classes/modules.

	* compile.c (compile_array_): no hash to merge if it is empty.

	* vm.c (m_core_hash_merge_kwd): just check keys if only one argument
	  is given, without merging.

2013-10-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to rake 10.1.0
	* bin/rake:  ditto.
	* test/rake:  ditto.

	* NEWS:  Update NEWS to include rake 10.1.0 and links to release notes.

Sat Oct 12 03:26:04 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c, variable.c, gc.c (rb_class_tbl): removed.

	* vm.c, vm_core.h (rb_vm_add_root_module): added to register as a
	  defined root module or class.
	  This guard helps mark miss from defined classes/modules they are
	  only referred from C's global variables in C-exts.
	  Basically, it is extension's bug.
	  Register to hash object VM has.
	  Marking a hash objects allows generational GC supports.

	* gc.c (RGENGC_PRINT_TICK): disable (revert).

Sat Oct 12 03:24:49 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_gc_mark_unlinked_live_method_entries):
	  revert last commit to introduce debug prints.

Fri Oct 11 21:05:19 2013  Koichi Sasada  <ko1@atdot.net>

	* internal.h, parse.y: use `full_mark' instead of `full_marking'.

Fri Oct 11 20:58:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use terminology `full_mark' instead of `minor_gc'
	  in mark functions.

Fri Oct 11 20:46:09 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use __GNUC__ instead of __GCC__.

Fri Oct 11 20:35:59 2013  Koichi Sasada  <ko1@atdot.net>
