@@ -1,5 +1,9 @@
 2013-10-14  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
+	* lib/mkmf.rb (have_framework): should append framework options to
+	  $LIBS, not $LDFLAGS.  the former is propagated to exts.mk when
+	  enable-static-linked-ext.
+
 	* lib/mkmf.rb (create_makefile): ranlib on static library, not DLLIB.
 
 2013-10-13  Andrew Grimm  <andrew.j.grimm@gmail.com>
